[package]
authors = ["ZhengYu, Xu <zen-xu@outlook.com>"]
categories = ["command-line-utilities"]
description = "Use a yaml file to stitch scripts and commands together."
edition = "2018"
license = "Apache-2.0"
name = "job-book"
repository = "https://github.com/zen-xu/job-book"
version = "0.1.0"

[dependencies]
clap = "2.33"
